--- a/views/admin/partials/adminSidebar.ejs
+++ b/views/admin/partials/adminSidebar.ejs
@@ -39,7 +39,7 @@ class="z-40 w-56 h-[calc(100vh-64px)] overflow-y-auto bg-gray-900 shadow-lg fixe
             <i class="fa-solid fa-image pr-3"></i>
             Banners
         </a>
-        <a href="/admin/coupon" class="flex items-center text-white hover:bg-gray-700 hover:text-gray-200 px-3 py-2 rounded-md space-x-2">
+        <a href="/admin/coupons" class="flex items-center text-white hover:bg-gray-700 hover:text-gray-200 px-3 py-2 rounded-md space-x-2">
             <i class="fa-solid fa-ticket pr-3"></i>
             Coupons
         </a>
