--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -59,6 +59,7 @@
                             <thead class="bg-gray-800 text-gray-100 text-sm md:text-base">
                                 <tr>
                                     <th class="px-4 py-3">ID</th>
+                                    <th class="px-4 py-3">Image</th>
                                     <th class="px-4 py-3">Product</th>
                                     <th class="px-4 py-3">Category</th>
                                     <th class="px-4 py-3">Price</th>
@@ -70,6 +71,17 @@
                               <% topProductsWithRevenue.forEach((product, index) => { %>
                                 <tr class="hover:bg-gray-800">
                                   <td class="px-4 py-2"><%= skip + index + 1 %></td>
+                                  <td class="px-4 py-2">
+                                    <% if (product.images && product.images.length > 0) { %>
+                                      <img src="<%= product.images[0].url %>" 
+                                           alt="<%= product.name %>" 
+                                           class="w-14 h-14 p-1 object-contain rounded bg-white">
+                                    <% } else { %>
+                                      <img src="/images/placeholder.png" 
+                                           alt="No image available" 
+                                           class="w-16 h-16 object-contain rounded">
+                                    <% } %>
+                                  </td>
                                   <td class="px-4 py-2 max-w-[150px] truncate"><%= product.name %></td>
                                   <td class="px-4 py-2"><%= product.category.name %></td>
                                   <td class="px-4 py-2">₹<%= product.price.toLocaleString() %></td>
