--- a/views/user/partials/userFooter.ejs
+++ b/views/user/partials/userFooter.ejs
@@ -36,10 +36,21 @@
         <div>
           <h2 class="text-lg font-semibold mb-4">Follow Us</h2>
           <div class="flex space-x-4 text-xl">
-            <a href="#"><i class="fab fa-facebook hover:text-[#1877F2]"></i></a>
-            <a href="#"><i class="fab fa-instagram hover:text-[#d629c5]"></i></a>
-            <a href="#"><i class="fab fa-twitter hover:text-[#1DA1F2]"></i></a>
-            <a href="#"><i class="fab fa-youtube hover:text-[#FF0000]"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+              <i class="fab fa-facebook hover:text-[#1877F2]"></i>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="group">
+              <i class="fab fa-instagram text-xl 
+                         group-hover:bg-gradient-to-tr group-hover:from-yellow-400 group-hover:via-pink-500 group-hover:to-purple-600
+                         group-hover:bg-clip-text group-hover:text-transparent"></i>
+            </a>            
+            <a href="https://www.x.com/" target="_blank" rel="noopener noreferrer">
+              <i class="fa-brands fa-x-twitter hover:text-gray-400"></i>
+            </a>
+            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+              <i class="fab fa-youtube hover:text-[#FF0000]"></i>
+            </a>
+            
           </div>
         </div>
       </div>
@@ -83,10 +94,21 @@
             Follow Us <i class="fas fa-chevron-down"></i>
           </button>
           <div class="flex space-x-4 text-xl mt-2 hidden toggle-content">
-            <a href="#"><i class="fab fa-facebook hover:text-[#1877F2]"></i></a>
-            <a href="#"><i class="fab fa-instagram hover:text-[#d629c5]"></i></a>
-            <a href="#"><i class="fab fa-twitter hover:text-[#1DA1F2]"></i></a>
-            <a href="#"><i class="fab fa-youtube hover:text-[#FF0000]"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+              <i class="fab fa-facebook hover:text-[#1877F2]"></i>
+            </a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" class="group">
+              <i class="fab fa-instagram text-xl 
+                         group-hover:bg-gradient-to-tr group-hover:from-yellow-400 group-hover:via-pink-500 group-hover:to-purple-600
+                         group-hover:bg-clip-text group-hover:text-transparent"></i>
+            </a>  
+            <a href="https://www.x.com/" target="_blank" rel="noopener noreferrer">
+              <i class="fab fa-twitter hover:text-[#1DA1F2]"></i>
+            </a>
+            <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer">
+              <i class="fab fa-youtube hover:text-[#FF0000]"></i>
+            </a>
+            
           </div>
         </div>
       </div>
