--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -68,13 +68,24 @@
           <span class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-400 cursor-pointer toggle-password">
             <i class="fa-solid fa-eye-slash"></i>
           </span>
-        </div>
+      </div>
       
         <div id="confirmPasswordError" class="flex items-center gap-1 mt-1 hidden">
           <i id="confirmPasswordIcon" class="fa-solid fa-circle-exclamation text-red-500"></i>
           <p id="confirmPasswordMessage" class="text-xs font-extralight text-red-500">Passwords match</p>
         </div>
       </div>
+
+      <div>
+        <label for="name" class="block text-sm font-medium text-gray-700">Referral Code(Optional)</label>
+        <input 
+          type="text"
+          name="manualReferral"
+          id="referral"
+          class="w-full px-3 py-2 font-extralight border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-400"/>
+      </div>
+
+      <input type="hidden" name="linkReferral" value="<%= referral %>">
 
       <button type="submit" id="submitBtn" disabled class="w-full bg-gray-100 text-gray-300 px-4 py-2 mt-8 cursor-not-allowed transition-colors">
         SUBMIT
