--- a/views/user/partials/userFilter.ejs
+++ b/views/user/partials/userFilter.ejs
@@ -109,7 +109,7 @@
             </div>
 
             <div class="mt-6">
-              <button type="submit" class="bg-teal-600 hover:bg-teal-700 text-white py-2 w-full">
+              <button type="submit" class="bg-green-500 hover:bg-green-600 text-white py-2 w-full">
                 Apply
               </button>
             </div>
