--- a/views/user/partials/userFooter.ejs
+++ b/views/user/partials/userFooter.ejs
@@ -1,11 +1,11 @@
-<footer class="bg-black text-white py-10">
+<footer class="bg-green-700 text-white py-10">
     <div class="max-w-6xl mx-auto px-4">
   
       
       <div class="hidden md:grid grid-cols-4 gap-8">
         
         <div>
-          <h2 class="text-2xl font-semibold text-gray-400 mb-4" style="font-family: 'Michroma', sans-serif;">Camverse</h2>
+          <h2 class="text-2xl font-semibold text-white mb-4" style="font-family: 'Michroma', sans-serif;">Camverse</h2>
           <p class="text-sm">123 Street, City, Country</p>
           <p class="text-sm">+91 9876543210</p>
         </div>
@@ -115,7 +115,7 @@
     </div>
   
     
-    <div class="mt-10 border-t border-gray-700 pt-4 text-center text-xs text-gray-400">
+    <div class="mt-10 border-t border-gray-700 pt-4 text-center text-xs text-gray-100">
       &copy; 2025 Camverse. All rights reserved.
     </div>
   </footer>   
